add: reactive styling to form

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="card ">
                     <img class="card-img-top rounded mt-2" src="./img/theBoys.jpg" alt="IA">
                     <div class="card-body">
-                        <h5 class="card-title">IA a la programació</h5>
+                        <h5 class="card-title">Troba aqui les millors practiques</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, rem! Soluta
                             aliquid reprehenderit doloremque, voluptatem amet ipsum expedita consequatur! Atque?</p>
                         <a href="./catalogo.html#superheroes" class="btn btn-outline-success w-100">Llegir més</a>
@@ -73,7 +73,7 @@
                 <div class="card ">
                     <img class="card-img-top rounded mt-2" src="./img/theBoys.jpg" alt="IA">
                     <div class="card-body">
-                        <h5 class="card-title">IA a la programació</h5>
+                        <h5 class="card-title">Codi net</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, rem! Soluta
                             aliquid reprehenderit doloremque, voluptatem amet ipsum expedita consequatur! Atque?</p>
                         <a href="./catalogo.html#superheroes" class="btn btn-outline-success w-100">Llegir més</a>
@@ -84,69 +84,73 @@
         </div>
 
         <h2 id="contacte" class="m-4 text-center">Contactan's</h2>
+        <div class="row justify-content-around">
+            <form class="col-10  col-md-8 border border-light rounded mt-4 p-4 ">
 
-        <form class="row border border-light rounded mt-4 p-4">
-            <div class="mb-3">
-                <label for="name" class="form-label">Nom</label>
-                <input type="text" class="form-control" id="name" placeholder="Nom">
-            </div>
-            <div class="mb-3">
-                <label for="surname" class="form-label">Cognom</label>
-                <input type="text" class="form-control" id="surname" placeholder="Cognom">
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Mail</label>
-                <input type="email" class="form-control" id="email" placeholder="elteumail@gmail.com">
-            </div>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Nom</label>
+                    <input type="text" class="form-control" id="name" placeholder="Nom">
+                </div>
+                <div class="mb-3">
+                    <label for="surname" class="form-label">Cognom</label>
+                    <input type="text" class="form-control" id="surname" placeholder="Cognom">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Mail</label>
+                    <input type="email" class="form-control" id="email" placeholder="elteumail@gmail.com">
+                </div>
 
-            <div class="mb-3">
-                <label for="name" class="form-label">Motiu per contactar-nos</label>
-                <select class="form-control">
-                    <option>Vull més informació</option>
-                    <option>Tinc un problema</option>
-                    <option>Altres</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Descripció</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                    placeholder="Something you want to add?"></textarea>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Motiu per contactar-nos</label>
+                    <select class="form-control">
+                        <option>Vull més informació</option>
+                        <option>Tinc un problema</option>
+                        <option>Altres</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Descripció</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                        placeholder="Something you want to add?"></textarea>
 
-            </div>
+                </div>
 
-            <div class="form-check mb-3">
-                <input type="checkbox" class="form-check-input" id="check">
-                <label for="check" class="form-check-label">He llegit els termes i serveis</label>
-            </div>
-            <div class="align-items-left">
-                <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal"
-                    data-bs-target="#eventModal">
-                    <i class="bi bi-send"></i> Enviar
-                </button>
+                <div class="form-check mb-3">
+                    <input type="checkbox" class="form-check-input" id="check">
+                    <label for="check" class="form-check-label">He llegit els termes i serveis</label>
+                </div>
+                <div class="align-items-left">
+                    <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#eventModal">
+                        <i class="bi bi-send"></i> Enviar
+                    </button>
 
-                <div class="modal" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-content rounded-3 shadow">
-                                <div class="modal-body p-4 text-center">
-                                    <h5 class="mb-0">Enviar formulari?</h5>
-                                    <p class="mb-0">Les teves dades seran emmagatzemades per properes consultes.</p>
-                                </div>
-                                <div class="modal-footer flex-nowrap p-0">
-                                    <button type="button"
-                                        class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0 border-end"><strong>Si,
-                                            envia</strong></button>
-                                    <button type="button"
-                                        class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0"
-                                        data-bs-dismiss="modal">No gràcies</button>
+                    <div class="modal" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-content rounded-3 shadow">
+                                    <div class="modal-body p-4 text-center">
+                                        <h5 class="mb-0">Enviar formulari?</h5>
+                                        <p class="mb-0">Les teves dades seran emmagatzemades per properes consultes.</p>
+                                    </div>
+                                    <div class="modal-footer flex-nowrap p-0">
+                                        <button type="button"
+                                            class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0 border-end"><strong>Si,
+                                                envia</strong></button>
+                                        <button type="button"
+                                            class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0"
+                                            data-bs-dismiss="modal">No gràcies</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-        </form>
+            </form>
+        </div>
+
     </main>
     <footer id="contacte" class="py-4 bg-primary text-white text-center">
         <p class="mb-1">© 2024 TecInfo . Tots els drets reservats.</p>
