--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <main class="grid-container p-3">
         <h2 id="articles" class="m-4 text-center">Els nostres articles</h2>
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mb-2">
             <div class="col">
                 <div class="card ">
-                    <img class="card-img-top rounded mt-2" src="./img/theBoys.jpg" alt="IA">
+                    <img class="card-img-top rounded mt-2" src="./img/ia.png" alt="IA">
                     <div class="card-body">
                         <h5 class="card-title">IA a la programació</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, rem! Soluta
@@ -58,9 +58,9 @@
 
             <div class="col">
                 <div class="card ">
-                    <img class="card-img-top rounded mt-2" src="./img/theBoys.jpg" alt="IA">
+                    <img class="card-img-top rounded mt-2" src="./img/tech.png" alt="IA">
                     <div class="card-body">
-                        <h5 class="card-title">Troba aqui les millors practiques</h5>
+                        <h5 class="card-title">Les millors praxis</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, rem! Soluta
                             aliquid reprehenderit doloremque, voluptatem amet ipsum expedita consequatur! Atque?</p>
                         <a href="./catalogo.html#superheroes" class="btn btn-outline-success w-100">Llegir més</a>
@@ -71,7 +71,7 @@
 
             <div class="col">
                 <div class="card ">
-                    <img class="card-img-top rounded mt-2" src="./img/theBoys.jpg" alt="IA">
+                    <img class="card-img-top rounded mt-2" src="./img/code.png" alt="IA">
                     <div class="card-body">
                         <h5 class="card-title">Codi net</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, rem! Soluta
@@ -83,9 +83,9 @@
 
         </div>
 
-        <h2 id="contacte" class="m-4 text-center">Contactan's</h2>
+        <h2 id="contacte" class="m-5 text-center">Contactan's</h2>
         <div class="row justify-content-around">
-            <form class="col-10  col-md-8 border border-light rounded mt-4 p-4 ">
+            <form class="col-10  col-md-8 border border-light rounded p-4 ">
 
                 <div class="mb-3">
                     <label for="name" class="form-label">Nom</label>
