--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -37,8 +38,15 @@
         </div>
     </nav>
 
-    <img src="./img/header.jpg" class="w-100">
-
+    <header class="jumbotron p-3 p-md-5 text-white">
+        <div class="col-md-6 px-0">
+            <h1 class="display-4 font-italic">InfoTech</h1>
+            <p class="lead my-3">On podràs llegir totes les noticies d'actualitat web, articles d'inverstigació i
+                comentaris de professionals</p>
+            <button type="button" class="btn btn-lg btn-primary">Llegeix els nostres articles
+            </button>
+        </div>
+    </header>
 
     <main class="grid-container p-3">
         <h2 id="articles" class="m-4 text-center">Els nostres articles</h2>
