refactor: change colors on buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous"></script>
 
 <body class="bg-light text-dark">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-3">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
         <a class="navbar-brand" href="./index.html">TechInfo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
             <h1 class="display-4 font-italic">InfoTech</h1>
             <p class="lead my-3">On podràs llegir totes les noticies d'actualitat web, articles d'inverstigació i
                 comentaris de professionals</p>
-            <button type="button" class="btn btn-lg btn-primary">Llegeix els nostres articles
+            <button href="index.html#articles" type="button" class="btn btn-lg btn-primary">Llegeix els nostres articles
             </button>
         </div>
     </header>
@@ -59,7 +59,7 @@
                         <h5 class="card-title">IA a la programació</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, rem! Soluta
                             aliquid reprehenderit doloremque, voluptatem amet ipsum expedita consequatur! Atque?</p>
-                        <a href="./catalogo.html#superheroes" class="btn btn-outline-success w-100">Llegir més</a>
+                        <a href="./catalogo.html#superheroes" class="btn btn-outline-primary w-100">Llegir més</a>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                         <h5 class="card-title">Les millors praxis</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, rem! Soluta
                             aliquid reprehenderit doloremque, voluptatem amet ipsum expedita consequatur! Atque?</p>
-                        <a href="./catalogo.html#superheroes" class="btn btn-outline-success w-100">Llegir més</a>
+                        <a href="./catalogo.html#superheroes" class="btn btn-outline-primary w-100">Llegir més</a>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                         <h5 class="card-title">Codi net</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, rem! Soluta
                             aliquid reprehenderit doloremque, voluptatem amet ipsum expedita consequatur! Atque?</p>
-                        <a href="./catalogo.html#superheroes" class="btn btn-outline-success w-100">Llegir més</a>
+                        <a href="./catalogo.html#superheroes" class="btn btn-outline-primary w-100">Llegir més</a>
                     </div>
                 </div>
             </div>
