--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="#" class="btn btn-outline-primary w-100">Llegir més</a>
                         <div class="progress mt-4" style="height: 10px;">
                             <div class="progress-bar progress-bar-striped bg-dark" role="progressbar"
-                                style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">95%</div>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         <a href="#" class="btn btn-outline-primary w-100">Llegir més</a>
                         <div class="progress mt-4" style="height: 10px;">
                             <div class="progress-bar progress-bar-striped bg-dark" role="progressbar"
-                                style="width: 45%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                style="width: 45%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">45%</div>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         <a href="#" class="btn btn-outline-primary w-100">Llegir més</a>
                         <div class="progress mt-4" style="height: 10px;">
                             <div class="progress-bar progress-bar-striped bg-dark" role="progressbar"
-                                style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">85%</div>
                         </div>
                     </div>
                 </div>
